--- a/sass/layout/_restaurants.scss
+++ b/sass/layout/_restaurants.scss
@@ -48,7 +48,6 @@
   z-index: 2;
   display: flex;
   justify-content: flex-end;
-  padding-right: 20px;
 }
 
 .restaurant-img {
@@ -65,7 +64,7 @@
   display: flex;
   flex-wrap: wrap;
   padding: 10px;
-  padding-left: 20px;
+  padding-left: 20px;ù
   h3 {
     font-size: 1.5em;
     margin-bottom: 0;
